# Wind_Farm_model

./: .gitignore  CMakeLists.txt  README.md  main.cpp  newtonRaphson.h  test.cpp  windfarm.code-workspace
algorithms/: newtonRaphson.cpp  newtonRaphson.h  power.h
file/: file_model.cpp  file_model.h  run_file.cpp  test_data
grid/: graph.cpp  graph.h  grid.cpp  grid.h  node.cpp  node.h  turbine.cpp  turbine.h
gtest/: CMakeLists.txt  testNode.cpp
src/: ACMakeLists.txt  CMakeLists.txt  main_wind_farm.cpp  tmpCMakeLists.txt
src/algorithms/: newtonRaphson.cpp  newtonRaphson.h
src/file/: file_model.cpp  file_model.h  run_file.cppp
src/grid/: graph.cpp  graph.h  graphs.txt  grid.cpp  node.cpp  node.h  nodes.txt
test/: CMakeLists.txt  example_add.cpp  example_subtract.cpp  main_test.cpp
test/algorithms/: example_add.cpp
test/file/: example_subtract.cpp
test/grid/: NR_test.cpp  graph_test.cpp  grid_test.cpp  node.cpp  node_test.cpp
test/test_files/: testgtest.cpp
tmp/: CMakeLists.txt
